# zk-node

./: .gitignore
.github/workflows/: check.yml
generate-merkle-proof/src/: circuit.rs  main.rs
generate-withdraw-proof/: Cargo.toml
generate-withdraw-proof/src/: circuit.rs  main.rs
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
zk-node/: Cargo.toml
zk-node/pallets/template/: Cargo.toml
zk-node/pallets/template/src/: benchmarking.rs
zk-node/runtime/src/: lib.rs
