[package]
name = "generate-merkle-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-bytes = { version = "0.1.5", default-features = false }
dusk-bls12_381 = { version = "0.9", default-features = false }
dusk-plonk = { version = "0.10.0", default-features = false, features = [
  "alloc",
] }
dusk-poseidon = { version = "0.25.0-rc.0", default-features = false, features = [
  "alloc",
] }
rand = { version = "0.8.5", default-features = false, features = [
  "std_rng",
  "alloc",
] }
hex = "0.4.0"

